<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_ros</name>
  <version>0.9.0</version>
  <description>The mujoco_ros package</description>

  <maintainer email="dleins@techfak.uni-bielefeld.de">David P. Leins</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/DavidPL1/mujoco_ros_pkgs</url>
  <url type="bugtracker">https://github.com/DavidPL1/mujoco_ros_pkgs/issues</url>
  <author>David P. Leins</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 1">dynamic_reconfigure</depend>
  <depend condition="$ROS_VERSION == 1">actionlib</depend>
  <depend>pluginlib</depend>
  <depend>mujoco_ros_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend version_gte="1.13.2">urdf</depend>
  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>

  <export>
    <mujoco_ros plugin="${prefix}/test/test_plugin/test_plugin.xml" />

    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
