cmake_minimum_required(VERSION 3.14)
project(mujoco_ros_pkgs)

if (DEFINED ENV{ROS_VERSION})
    set(ROS_VERSION $ENV{ROS_VERSION})
else()
    message(FATAL_ERROR "ROS_VERSION is not defined")
endif()

if (ROS_VERSION EQUAL "1")
    find_package(catkin REQUIRED)
    catkin_metapackage()
else()
    find_package(ament_cmake REQUIRED)
    ament_package()
endif()
